[package]
name = "cconvert"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.1", features = ["derive"] }
owo-colors = "3.5.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.29.1", features = ["full"] }
ureq = "2.6.2"


[profile.release]
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
